--- a/index.html
+++ b/index.html
@@ -13,21 +13,24 @@ body {
     padding: 40px;
 }
 .container { max-width: 360px; margin: auto; }
-.subtitle { font-size:16px; margin-bottom:12px; }
+.subtitle {
+    font-size:16px;
+    margin-bottom: 20px; /* 간격 늘림 */
+}
 
-/* 로그인 버튼 왼쪽 위 */
+/* 로그인 영역 왼쪽 위 */
 #loginArea {
     position: absolute;
     top: 10px;
     left: 10px;
-    display: block;
+    display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 5px; /* 버튼 사이 간격 */
+    margin-bottom: 20px; /* 컨테이너와 간격 */
 }
-#googleLoginBtn, #logoutBtn {
+#loginArea button {
     padding: 6px 10px;
     font-size: 12px;
-    width: auto;
 }
 #userInfo { font-size: 12px; color: white; margin-top: 2px; }
 
@@ -187,7 +190,7 @@ async function loadLastRecord(){
 window.addEventListener("scroll", ()=>{
     const loginArea = document.getElementById("loginArea");
     if(window.scrollY > 50){ loginArea.style.display="none"; }
-    else { loginArea.style.display="block"; }
+    else { loginArea.style.display="flex"; }
 });
 </script>
 </body>
