--- a/index.html
+++ b/index.html
@@ -10,29 +10,30 @@ body {
     color: white;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
     text-align: center;
-    padding: 70px;
+    padding: 40px;
 }
 .container { max-width: 360px; margin: auto; }
-.subtitle {
-    font-size:16px;
-    margin-bottom: 20px; /* 간격 늘림 */
-}
+.subtitle { font-size:16px; margin-bottom: 20px; }
 
-/* 로그인 영역 왼쪽 위 */
+/* 로그인 영역 왼쪽 위, 깔끔하게 개선 */
 #loginArea {
     position: absolute;
     top: 10px;
     left: 10px;
     display: flex;
     flex-direction: column;
-    gap: 2px; /* 버튼 사이 간격 */
-    margin-bottom: 10px; /* 컨테이너와 간격 */
+    gap: 6px; /* 버튼 사이 간격 */
+    padding: 8px;
+    background: rgba(0,0,0,0.5); /* 반투명 배경 */
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
 }
 #loginArea button {
-    padding: 6px 10px;
-    font-size: 12px;
+    padding: 8px 12px;
+    font-size: 13px;
+    border-radius: 6px;
 }
-#userInfo { font-size: 12px; color: white; margin-top: 2px; }
+#userInfo { font-size: 12px; color: #fff; text-align: center; }
 
 select, button {
     width:100%; padding:14px; margin:10px 0; font-size:18px;
