--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@ body {
     background: black;
     color: white;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto;
+    padding: 70px 20px 20px 20px;
     text-align: center;
-    padding: 70px;
 }
 .container { max-width: 400px; margin: auto; }
 .subtitle { font-size:16px; margin-bottom: 20px; }
 
-/* 로그인 영역 왼쪽 위 */
+/* 로그인 영역 */
 #loginArea {
     position: absolute;
     top: 10px;
@@ -31,14 +31,38 @@ body {
 #loginArea button { padding: 8px 12px; font-size: 13px; border-radius: 6px; }
 #userInfo { font-size: 12px; color: #fff; text-align: center; }
 
-select, button { width:100%; padding:14px; margin:10px 0; font-size:18px; border-radius:10px; border:none; text-align:center; }
+/* 탭 스타일 */
+.tab {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 15px;
+    gap: 5px;
+}
+.tab button {
+    padding: 10px 15px;
+    border: none;
+    border-radius: 8px 8px 0 0;
+    background: #333;
+    color: white;
+    cursor: pointer;
+    font-weight: bold;
+}
+.tab button.active { background: #555; }
+
+/* 탭 콘텐츠 */
+.tabContent { display: none; }
+.tabContent.active { display: block; }
+
+/* 공통 */
+select, button, input[type=number] {
+    width:100%; padding:14px; margin:10px 0; font-size:18px; border-radius:10px; border:none; text-align:center;
+}
 button { font-size:20px; background:white; color:black; font-weight:bold; }
-#result { margin-top:20px; font-size:22px; }
-table { width:100%; margin-top:25px; border-collapse:collapse; font-size:17px; }
+table { width:100%; margin-top:15px; border-collapse:collapse; font-size:17px; }
 table, th, td { border:1px solid white; }
 th, td { padding:10px; text-align:center; }
 
-/* 토탈 3대 중량 강조 */
+/* 토탈 강조 */
 #total3 { font-size: 24px; font-weight:bold; margin-top: 15px; color: #FFD700; }
 </style>
 </head>
@@ -49,24 +73,32 @@ th, td { padding:10px; text-align:center; }
 </div>
 <h2>조현성을 위한 1RM 계산기</h2>
 
-<!-- 1RM 계산 영역 -->
-<select id="weight"><option value="">무게 선택</option></select>
-<select id="reps"><option value="">반복수 선택</option></select>
-<button onclick="calculate1RM()">GO</button>
-<div id="result"></div>
-<div id="tableArea"></div>
+<!-- 탭 버튼 -->
+<div class="tab">
+    <button class="tabBtn active" onclick="openTab(0)">1RM 계산기</button>
+    <button class="tabBtn" onclick="openTab(1)">3대 기록표</button>
+</div>
 
-<!-- 3대 기록 테이블 -->
-<h3>3대 기록표</h3>
-<table>
-<tr><th>종목</th><th>1RM(kg)</th></tr>
-<tr><td>벤치프레스</td><td><input type="number" id="benchRM" min="0"></td></tr>
-<tr><td>스쿼트</td><td><input type="number" id="squatRM" min="0"></td></tr>
-<tr><td>데드리프트</td><td><input type="number" id="deadRM" min="0"></td></tr>
-</table>
-<div id="total3">토탈 3대 중량: 0 kg</div>
-<button id="save3Btn" style="display:none;">3대 기록 저장</button>
-<div id="saveResult" style="margin-top:20px; font-size:18px;"></div>
+<!-- 탭 콘텐츠 -->
+<div class="tabContent active">
+    <select id="weight"><option value="">무게 선택</option></select>
+    <select id="reps"><option value="">반복수 선택</option></select>
+    <button onclick="calculate1RM()">GO</button>
+    <div id="result"></div>
+    <div id="tableArea"></div>
+</div>
+
+<div class="tabContent">
+    <table>
+        <tr><th>종목</th><th>1RM(kg)</th></tr>
+        <tr><td>벤치프레스</td><td><input type="number" id="benchRM" min="0"></td></tr>
+        <tr><td>스쿼트</td><td><input type="number" id="squatRM" min="0"></td></tr>
+        <tr><td>데드리프트</td><td><input type="number" id="deadRM" min="0"></td></tr>
+    </table>
+    <div id="total3">토탈 3대 중량: 0 kg</div>
+    <button id="save3Btn" style="display:none;">3대 기록 저장</button>
+    <div id="saveResult" style="margin-top:20px; font-size:18px;"></div>
+</div>
 </div>
 
 <!-- 로그인 영역 -->
@@ -79,7 +111,6 @@ th, td { padding:10px; text-align:center; }
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
-
 <script>
 // Firebase 설정
 const firebaseConfig = {
@@ -204,6 +235,14 @@ window.addEventListener("scroll", ()=>{
     const loginArea = document.getElementById("loginArea");
     loginArea.style.display = (window.scrollY > 50) ? "none" : "flex";
 });
+
+// 탭 기능
+const tabBtns = document.querySelectorAll(".tabBtn");
+const tabContents = document.querySelectorAll(".tabContent");
+function openTab(index){
+    tabBtns.forEach((btn,i)=>btn.classList.toggle("active",i===index));
+    tabContents.forEach((content,i)=>content.classList.toggle("active",i===index));
+}
 </script>
 </body>
 </html>
