--- a/index.html
+++ b/index.html
@@ -41,16 +41,13 @@ td { padding:8px; text-align:center; }
 #loginArea button { padding: 8px 12px; font-size: 13px; border-radius:6px; }
 #userInfo { font-size:12px; color:#fff; text-align:center; }
 
-/* 탭 스타일 */
 .tab { display:flex; justify-content:center; gap:10px; margin-bottom:20px; }
 .tab button { padding:10px 20px; border:none; border-radius:8px; cursor:pointer; background:#333; color:white; font-weight:bold; }
 .tab button.active { background:#FFD700; color:black; }
 
-/* 탭 컨텐츠 숨기기 */
 .tabContent { display:none; }
 .tabContent.active { display:block; }
 
-/* 3대 총합 강조 */
 #total3 { font-size:28px; font-weight:bold; margin-bottom:15px; color:#FFD700; }
 input.rmInput { width:80px; font-size:16px; text-align:center; }
 </style>
@@ -61,7 +58,6 @@ input.rmInput { width:80px; font-size:16px; text-align:center; }
     <div class="subtitle">"대부분의 문제는 돈이 없어서, 그 외의 문제는 근육이 없어서 생긴다"</div>
     <h2>조현성을 위한 1RM 계산기 + 3대 기록표</h2>
 
-    <!-- 탭 -->
     <div class="tab">
         <button class="tabBtn active" data-target="tab1">1RM 계산기</button>
         <button class="tabBtn" data-target="tab2">3대 기록표</button>
@@ -74,7 +70,6 @@ input.rmInput { width:80px; font-size:16px; text-align:center; }
         <button onclick="calculate1RM()">GO</button>
         <div id="result"></div>
         <div id="tableArea"></div>
-        <!-- 기록 저장 버튼 제거 -->
         <div id="saveResult" style="margin-top:20px; font-size:18px;"></div>
     </div>
 
@@ -93,7 +88,6 @@ input.rmInput { width:80px; font-size:16px; text-align:center; }
     </div>
 </div>
 
-<!-- 로그인 영역 -->
 <div id="loginArea">
     <button id="googleLoginBtn">Google 로그인</button>
     <button id="logoutBtn" style="display:none;">로그아웃</button>
@@ -117,7 +111,6 @@ firebase.initializeApp(firebaseConfig);
 const auth = firebase.auth();
 const db = firebase.firestore();
 
-// 요소
 const googleLoginBtn = document.getElementById("googleLoginBtn");
 const logoutBtn = document.getElementById("logoutBtn");
 const userInfo = document.getElementById("userInfo");
@@ -165,8 +158,6 @@ googleLoginBtn.onclick = () => {
         .then(result => console.log("로그인 성공:", result.user))
         .catch(error => alert("로그인 실패: " + error.message));
 };
-
-// 로그아웃
 logoutBtn.onclick = () => auth.signOut().then(()=>console.log("로그아웃 완료"));
 
 // 로그인 상태 확인
@@ -174,13 +165,14 @@ auth.onAuthStateChanged(user=>{
     if(user){
         googleLoginBtn.style.display="none";
         logoutBtn.style.display="block";
-        //save3Btn.style.display="block";
+        save3Btn.style.display="block";
         userInfo.textContent = `${user.displayName} 님`;
+
         loadLast3Record();
     }else{
         googleLoginBtn.style.display="block";
         logoutBtn.style.display="none";
-       // save3Btn.style.display="none";
+        save3Btn.style.display="none";
         userInfo.textContent="";
         document.getElementById("save3Result").textContent="";
     }
